crates/chiron-horizon-sql-dialect/src/sql_dialect/snapshots/chiron_horizon_sql_dialect__sql_dialect__descriptor_snapshots__mysql_info.snap
---
source: crates/chiron-horizon-sql-dialect/src/sql_dialect/descriptor_snapshots.rs
assertion_line: 43
expression: info
---
{
  "kind": "mysql",
  "label": "mysql",
  "capabilities": [
    "add_column",
    "drop_column",
    "rename_column",
    "alter_existing_column",
    "reorder_column",
    "comment",
    "create_index",
    "drop_index",
    "rebuild_index",
    "index_type",
    "index_comment",
    "alter_primary_key",
    "foreign_key",
    "create_table",
    "drop_table",
    "truncate_table",
    "create_trigger",
    "drop_trigger",
    "create_function",
    "drop_function",
    "create_sequence",
    "drop_sequence",
    "alter_owner",
    "grant_revoke",
    "if_not_exists",
    "temporary_table",
    "auto_increment"
  ],
  "max_identifier_length": 64,
  "supports_schemas": false,
  "supports_catalogs": false,
  "max_columns_per_table": 4096,
  "supports_json_type": true,
  "supports_array_type": false,
  "supports_enum_type": true,
  "supports_uuid_type": false,
  "supports_auto_increment": true,
  "supports_identity_columns": false,
  "supports_sequences": false,
  "supports_partitioning": true,
  "supports_full_text_index": true,
  "supports_spatial_index": true,
  "supports_transactional_ddl": false
}
